<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarActivity">

    <EditText
        android:id="@+id/codProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/c_digo_de_producto" />

    <EditText
        android:id="@+id/nombreProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/codProducto"
        android:hint="@string/nombre_de_producto"/>

    <Spinner
        android:id="@+id/proveedores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreProducto"/>

    <EditText
        android:id="@+id/pvp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/proveedores"
        android:hint="@string/pvp"/>

    <RadioGroup
        android:layout_below="@+id/pvp"
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"/>

        <RadioButton
            android:id="@+id/b10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"/>

        <RadioButton
            android:id="@+id/b21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21"/>

    </RadioGroup>

    <Button
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup"
        android:text="@string/insertar"/>

</RelativeLayout>